--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,23 @@
-.App {
-  text-align: center;
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
+#email {
+  padding: 10px;
+  font-size: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input[type=submit] {
+  padding: 10px;
+  font-size: 15px;
 }
 
-.App-link {
-  color: #09d3ac;
+.maior {
+  font-size: 30px;
+}
+
+.menor {
+  font-size: 15px;
 }
